bynkc/tests/fixtures/positive/211_bynk_string_join/src/report/report.karn
commons report {
  uses bynk.string

  fn csvLine(cells: List[String]) -> String {
    join(cells, ",")
  }

  fn roundTrip(line: String) -> String {
    join(line.split(","), ",")
  }
}
