bynkc/tests/fixtures/negative/44_opaque_base_access_outside/src/user/main.karn
commons user

uses lib

fn peek(t: Token) -> String {
  t.raw
}
